# nucliadb

./: .coveragerc  .dockerignore  .fossa.yml  .git-blame-ignore-revs  .gitignore  .license_header.txt  .licenserc.yaml  .pre-commit-config.yaml  .semgrepignore  CODE_OF_CONDUCT.md  CODE_STYLE_PYTHON.md  CODE_STYLE_RUST.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.basenode  Dockerfile.cluster_monitor  Dockerfile.ingest  Dockerfile.ingest.MacOs  Dockerfile.nidx  Dockerfile.nidx_prebuilt  Dockerfile.node  Dockerfile.node_local  Dockerfile.node_prebuilt  Dockerfile.node_sidecar  Dockerfile.one  Dockerfile.pipbinding  Dockerfile.reader  Dockerfile.rust  Dockerfile.search  Dockerfile.train  Dockerfile.withbinding  Dockerfile.writer  LICENSE.txt  Makefile  NucliaDB_individual_CLA.md  README.MacOs.md  README.md  VERSION  (+25 more)
nidx/: Cargo.toml  README.md  launch.sh
nidx/.config/: nextest.toml
nidx/.sqlx/: query-003a30794c69fa16118ab439d1a289c6884980f791d4206950461204370bc542.json  query-0515798eecc0617dc2533c0b4d373a4aa4563e71c26069b0210afa6bc1e3da62.json  query-0592d80a004cb975976e21de68ca2c9c8bf1ade90950e7a846a4387634f2d1c2.json  query-05f65264d1982a06276c23fb48437cf942f5fc67b0a2ac2924ceff8070392f62.json  query-083435c96027ad48ea7b4067a184d4f9dbe54d2b5aef1d829c603939bdb469ca.json  query-0cfce9b29547f8f5bafa6e440f86103be7b8c4ad2fd92db9ac223f4efbe23d10.json  query-1a561eed00f3dbe868bf5030059793300209179dc8fb73e4b57a54b5e81262fe.json  query-1af431638ce0a7566f7e869992a46a4d5d214ae4decd000eba0ec36bd2e84809.json  query-1b8c0301a672339ab2c39fdf906e6dbab4e54022b4baf11391fb968eda01085a.json  query-1d3fca2682e25a01143da92285297f134a6a105a96f64d87e0db3abb219855e4.json  query-1eab17fdaf452cfa2e71a050b43b8d8d421ce345d99c1ba4158f2e5788a4e35e.json  query-249b3b57c27a71baa823f1fe0f0bba9c9af36f61c28f731e58beea60ec48e687.json  query-24cb6b683daa42d7125f862e25943ab4be7bf275cd8739f8da4859d701795e1a.json  query-263c8fce6db5b03bbd012fafdba6943cbee6ed7eb8976cdef4f5b01dde7ca6fd.json  query-2a43bc5131650ae6080751bfb0f4615d4b9135fbe002c1c7ff1896a7925f8269.json  query-2a5d92fb1638df830a4477a7cdf24e6db6b43034b7bbe74fdfb63e8afe2c4071.json  query-2b065a363f58caed60e3706603c1260dbf5a4c795604a5b68edda22eb07fec1b.json  query-391694cc5a131902fff5145681c6375e6c00a4e2fb2c049e14dd7d41e980183f.json  query-3c57c7059d4823d07c20d50520eda813a28f97d286f2c1197f7cddddc169ef23.json  query-3d4b9fff6b2df02e7736f843e334d979a236003681974fc7cba334ef3a146fc8.json  query-3e807036087f9764f0f6cb3fb2085c3fa51c6c31ede416d0242cd471c2e610d6.json  query-3fc3cb39934683de8cd475ce1368c8373453eb1e01f81587d66b9d14b109ce6e.json  query-48f33b77b7c1633467b0b2efcaa1d3c207e7757e4f1d83b40d15e6ca365f7771.json  query-4963bae09292bcd89667bd199a6995e7fe10118f26e1a695a7213abadfc88751.json  query-4a6862d0567126d42f36a4c33cf0b0c9d7a899ace955dfbef63e317599014df8.json  query-4ae09f2c08e2f324bee01bb8487a8f37678a1c5e9d327339235c50d4921a8949.json  query-4d7a76fa413c9ef0ce2a47ac7bb7e01d3e6a2aabded9487d21010a53efee8852.json  query-4fc9b1dc170aea3e5ac0f83b3199728fc96ee42f24c4270cc228904ad085be32.json  query-4fcbdd6657c7dc9b60b3a563dd41711b3dbcf72ce063427b7a01f8cddf34c244.json  query-4ff9f8d3f76bb30d1b2098e1d8ec93e5885bfd6fe2031c433c0439b1bcf8f2ef.json  query-5134f4f25b38e742262c72a77dcf520babd68bd2e0b38781a19188f6f1023ec9.json  query-51f46dbf00703bd02cef13cc36c0c081055045055ecd537312d06f3c9e1de313.json  query-523c73863b69a6cc6617940aae43d85527026842f662453f9fb003940d31e953.json  (+95 more)
nucliadb/: CHANGELOG  MANIFEST.in  Makefile  README.md  config.yaml  pyproject.toml  requirements-sources.txt  requirements-test.txt  requirements.lock.txt  requirements.txt  setup.cfg  setup.py
nucliadb_cluster/: Cargo.toml  LICENSE-AGPL  README.md  entrypoint.sh  requirements-source.txt  requirements.txt  setup.cfg  setup.py
nucliadb_core/: Cargo.toml
nucliadb_dataset/: CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements-sources.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
nucliadb_ftp/: Cargo.toml  README.md
nucliadb_models/: CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-sources.txt  requirements.txt  setup.cfg  setup.py
nucliadb_node/: .env  .rustc_info.json  Cargo.toml  Makefile  README.md  entrypoint.sh  requirements-sources.txt  requirements.txt  setup.cfg  setup.py  test.sh
nucliadb_node_binding/: .cargo  CHANGELOG.md  Cargo.toml  Makefile  README.md  cov.sh  nucliadb_protos  pyproject.toml  test.py
nucliadb_paragraphs/: Cargo.toml  build.rs
nucliadb_paragraphs_tantivy/: .gitignore  Cargo.toml  build.rs
nucliadb_procs/: Cargo.toml
nucliadb_protos/: activity_log.proto  audit.proto  backups.proto  build.py  dataset.proto  kb_usage.proto  knowledgebox.proto  migrations.proto  nodereader.proto  noderesources.proto  nodesidecar.proto  nodewriter.proto  pyproject.toml  reader.proto  replication.proto  resources.proto  standalone.proto  train.proto  unified.proto  utils.proto  writer.proto
nucliadb_relations/: Cargo.toml
nucliadb_relations2/: Cargo.toml
nucliadb_sdk/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-sources.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
nucliadb_service_interface/: Cargo.toml
nucliadb_services/: Cargo.toml
nucliadb_shard_balancer/: Cargo.toml  README.md
nucliadb_swim/: Cargo.toml  LICENSE-MIT  MANIFEST.in  README.md  setup.py
nucliadb_telemetry/: CHANGELOG.md  CHANGELOG.rst  Cargo.toml  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
nucliadb_texts/: Cargo.toml
nucliadb_utils/: CHANGELOG  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  VERSION  pyproject.toml  requirements-cache.txt  requirements-fastapi.txt  requirements-postgres.txt  requirements-sources.txt  requirements-storages.txt  requirements.txt  setup.cfg  setup.py
nucliadb_vectors/: Cargo.toml
vectors_benchmark/: Cargo.toml  Makefile  README.md  reader.gp  writer.gp
(+3898 files in other folders)
