[workspace]

members = [
  "nucliadb_cluster",
  "nucliadb_core",
  "nucliadb_node",
  "nucliadb_node/binding",
  "nucliadb_paragraphs",
  "nucliadb_protos/rust",
  "nucliadb_relations",
  "nucliadb_telemetry",
  "nucliadb_texts",
  "nucliadb_vectors",
  "nucliadb_vectors2",
  "vectors_benchmark",
]
