[project]
name = "nucliadb_workspace"
requires-python = ">=3.9"
version = "0.0.0"
dependencies = [
    "nucliadb @ file:///${PROJECT_ROOT}/nucliadb",
    # TODO: We don't want to add nidx-protos as a nucliadb dependency yet
    "nidx-protos @ file:///${PROJECT_ROOT}/nidx/nidx_protos",
]

[project.optional-dependencies]
nidx = [
    "nidx-binding @ file:///${PROJECT_ROOT}/nidx/nidx_binding",
]
[tool.pdm.dev-dependencies]
dev = [
    # List all the packages we want to install as editable
    "-e file:///${PROJECT_ROOT}/nucliadb",
    "-e file:///${PROJECT_ROOT}/nucliadb_models",
    "-e file:///${PROJECT_ROOT}/nucliadb_protos/python",
    "-e file:///${PROJECT_ROOT}/nucliadb_telemetry[all]",
    "-e file:///${PROJECT_ROOT}/nucliadb_utils[cache,fastapi,storages]",
    "-e file:///${PROJECT_ROOT}/nidx/nidx_protos",
    "-e file:///${PROJECT_ROOT}/nidx/nidx_binding",
    # Linting
    "mypy-protobuf>=3.6.0",
    "mypy==1.10",
    "ruff==0.4.8",
    "pre-commit==2.20.0",
    # Testing
    "pytest==8.2.2",
    "pytest-asyncio~=0.23.0",
    "pytest-cov==3.0.0",
    "types-setuptools",
    "types-redis",
    "httpx>=0.23.0,<0.28.0",
    "pytest-docker-fixtures>=1.3.17",
    "pytest-benchmark",
    "docker>=7.1.0",
    "grpcio-health-checking==1.44.0",
    "requests",
    "maturin",
    "pytest-lazy-fixtures",
    "pytest-mock",
    "faker>=25.1.0",
    "grpc-stubs>=1.44.0",
    "aioresponses",
    "psycopg2-binary",
    "pytest-docker-fixtures>=1.3.17",
    "aiobotocore",
    "s3fs",
    "redis>=4.3.4",
    "pytest-rerunfailures>=11.1.2",
    "pytest-shard",
    "jsonschema",
    "pytest-xdist>=3.6.1",
    "pdbpp>=0.10.3",
    "types-PyYAML>=6.0.12.20240808",
]
sdk = [
    "-e file:///${PROJECT_ROOT}/nucliadb_sdk#egg=nucliadb-sdk",
    "-e file:///${PROJECT_ROOT}/nucliadb_dataset#egg=nucliadb-dataset",
    "requests-mock>=1.12.1",
]

[tool.setuptools]
py-modules = []
