[project]
name = "nucliadb_workspace"
requires-python = ">=3.10"
version = "6.9.3"
dependencies = ["nucliadb"]

[tool.uv.workspace]
members = [
    "nidx/nidx_binding",
    "nidx/nidx_protos",
    "nucliadb_dataset",
    "nucliadb_models",
    "nucliadb_protos",
    "nucliadb_sdk",
    "nucliadb_telemetry",
    "nucliadb_utils",
    "nucliadb",
]

[tool.uv]
default-groups = "all"
managed = true

[tool.uv.sources]
nidx-binding = { workspace = true }
nidx-protos = { workspace = true }
nucliadb = { workspace = true }
nucliadb-dataset = { workspace = true }
nucliadb-models = { workspace = true }
nucliadb-protos = { workspace = true }
nucliadb-sdk = { workspace = true }
nucliadb-telemetry = { workspace = true }
nucliadb-utils = { workspace = true }

[dependency-groups]
dev = [
    # Linting
    "mypy-protobuf>=3.6.0",
    "mypy==1.15",
    "pre-commit==2.20.0",
    "ruff==0.9.9",
    # Testing
    "aioresponses",
    "faker>=25.1.0",
    "jsonschema",
    "pdbpp>=0.10.3",
    "pytest-asyncio~=0.23.0",
    "pytest-benchmark",
    "pytest-cov==3.0.0",
    "pytest-docker-fixtures[pg]>=1.3.17",
    "pytest-lazy-fixtures",
    "pytest-mock",
    "pytest-rerunfailures>=11.1.2",
    "pytest-shard",
    "pytest-xdist>=3.6.1",
    "pytest==8.2.2",
    "requests",
    "requests-mock>=1.12.1",
    "types-PyYAML>=6.0.12.20240808",
]
nidx = [
  "nidx-binding"
]
sdk = [
    "nucliadb_sdk",
    "nucliadb_dataset"
]
