[package]
name = "nucliadb_cluster"
version = "0.1.0"
authors = ['Bosutech S.L.']
edition = "2021"
license = "AGPL-3.0-or-later"
description = "nucliadb cluster membership"
repository = "https://github.com/stashify/nucliadb"
homepage = "https://nuclia.com/"
documentation = "https://nuclia.com/"

[[bin]]
name = "cluster_manager"
path = "src/bin/manager.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
flume = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0"
tokio = { version = "1.7", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["sync"] }
tonic = "0.7"
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }
log = "0.4.14"
env_logger = "0.9.0"
chitchat = { version = "0.4.0" }
clap = { version = "3.1.18", features = ["derive"] }
dockertest = "0.3.0"
bytes = "1.1.0"
crc32fast = "1.3.2"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
structopt = "0.3.26"

[dev-dependencies]
itertools = '0.10'
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"
