[package]
name = "nucliadb_cluster"
version = "0.1.0"
authors = ['Bosutech S.L.']
edition = "2021"
license = "AGPL-3.0-or-later"
description = "nucliadb cluster membership"
repository = "https://github.com/stashify/nucliadb"
homepage = "https://nuclia.com/"
documentation = "https://nuclia.com/"

[[bin]]
name = "cluster_manager"
path = "src/bin/manager.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0"
tokio = { version = "1.7", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }
log = "0.4.14"
env_logger = "0.9.0"
chitchat = "0.5.0"
dockertest = "0.3.0"
bytes = "1.1.0"
crc32fast = "1.3.2"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
clap = { version = "4.0.29", features = ["derive", "env"] }
parse_duration = "2.1.1"
derive_builder = "0.12.0"
derive_more = { version = "0.99.17", default-features = false, features = ["display", "deref", "deref_mut"] }
futures = "0.3.25"

[dev-dependencies]
serde_test = "1.0.150"
serial_test = "0.10.0"

[[test]]
name = "integration"
path = "tests/integration.rs"
