[package]
name = "nucliadb_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
prometheus-client = "0.20.0"
tracing = "0.1.29"
prost-types = "0.10"
prost = "0.10"
rayon = "1.5.1"
nucliadb_protos = { path = "../nucliadb_protos/rust" }
fs2 = "0.4.3"
thiserror = "1.0.31"
bincode = "1.3.3"
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
futures = "0.3.17"
tonic = "0.7"
hyper = "0.14.26"
tower = "0.4.13"
tokio-metrics = "0.3.0"
dashmap = "5.4.0"
