[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nucliadb_models"
version = "6.6.1"
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "Nuclia", email = "nucliadb@nuclia.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9, <4"
# https://github.com/pydantic/pydantic/issues/11978
dependencies = ["pydantic>=2.6,!=2.11.5,!=2.11.6"]

[project.urls]
Homepage = "https://nuclia.com"
Repository = "https://github.com/nuclia/nucliadb"
