[package]
name = "nucliadb_node"
version = "0.1.0"
edition = "2021"
authors = ["NucliaDB <nucliadb@nuclia.com>"]
license = 'AGPL-3.0-or-later'
description = "Node of nucliadb"
repository = "https://github.com/nuclia/nucliadb"
homepage = "https://nuclia.com/"
documentation = "https://nuclia.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "payload_test"
path = "src/bin/payload_test.rs"

[[bin]]
name = "node_reader"
path = "src/bin/reader.rs"

[[bin]]
name = "node_writer"
path = "src/bin/writer.rs"

[dependencies]
tonic = "0.7"
tonic-health = "0.6"
async-std = "1.10.0"
futures-core = "0.3.17"
futures-util = "0.3.17"
futures = "0.3.17"
tokio = { version = "1.12.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
] }
tokio-stream = "0.1.7"
log = "0.4.14"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
bincode = "1.3.3"
async-trait = "0.1.51"
time = "0.3.3"
itertools = "0.10"
anyhow = "1"
http = "0.2"
thiserror = "1"
opentelemetry = { version = "0.17", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.17.2"
# Test dependencies
tempfile = "3.2.0"
regex = "1.5.5"
lazy_static = "1.4.0"
openssl = { version = "0.10", features = ["vendored"] }

# Text Service
async-stream = "0.3.2"

rand = "0.8.4"

# nucliadb dependencies
nucliadb_cluster = { path = "../nucliadb_cluster" }
nucliadb_telemetry = { path = "../nucliadb_telemetry" }
nucliadb_ftp = { path = "../nucliadb_ftp" }
nucliadb_core = { path = "../nucliadb_core" }
nucliadb_texts= { path = "../nucliadb_texts" }
nucliadb_paragraphs= { path = "../nucliadb_paragraphs" }
nucliadb_vectors= { path = "../nucliadb_vectors" }
nucliadb_relations= { path = "../nucliadb_relations" }

# test
tempdir = "0.3.7"
portpicker = "0.1.1"

# sentry sdk
sentry = "0.26.0"
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "registry",
    "std",
] }
dotenvy = "0.15.1"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
opentelemetry-zipkin = "0.15.0"
sentry-tracing = "0.27.0"

# Metrics related-dependencies
prometheus = { version = "0.13.3", features = ["push"] }
parse_duration = "2.1.1"

# indra
# indradb-lib = { version = "1", features = ["rocksdb-datastore"] }

[build-dependencies]
tonic-build = "0.7.0"

[features]
ci-test = []
release-feature-set = []

[profile.release]
lto = true

[dev-dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }

once_cell = { version = "1.17" }

tokio = { version = "1.12.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
] }

tracing = { version = "0.1.29" }
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "registry",
    "std",
] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
