[package]
name = "nucliadb_node"
version = "0.1.0"
edition = "2021"
authors = ["NucliaDB <nucliadb@nuclia.com>"]
license = 'AGPL-3.0-or-later'
description = "Node of nucliadb"
repository = "https://github.com/nuclia/nucliadb"
homepage = "https://nuclia.com"
documentation = "https://nuclia.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node_reader"
path = "src/bin/reader.rs"

[[bin]]
name = "node_writer"
path = "src/bin/writer.rs"

[dependencies]
axum = "0.6.15"
axum-server = "0.4.7"

tonic = "0.7"
tonic-health = "0.6"
async-std = "1.10.0"
futures-core = "0.3.17"
futures-util = "0.3.17"
futures = "0.3.17"
tokio = { version = "1.12.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
] }
tokio-stream = "0.1.7"
log = "0.4.14"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
bincode = "1.3.3"
async-trait = "0.1.51"
time = "0.3.3"
itertools = "0.10"
anyhow = { version = "1", features = ["backtrace"] }
http = "0.2"
hyper = "0.14.26"
tower = "0.4.13"
thiserror = "1"
opentelemetry = { version = "0.17", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.17.2"
reqwest = "0.11.16"
derive_builder = "0.12.0"
num_cpus = "1.16.0"
crossbeam-utils = "0.8.16"

# Text Service
async-stream = "0.3.2"

rand = "0.8.4"

# nucliadb dependencies
nucliadb_telemetry = { path = "../nucliadb_telemetry" }
nucliadb_core = { path = "../nucliadb_core" }
nucliadb_procs = { path = "../nucliadb_procs" }
nucliadb_texts = { path = "../nucliadb_texts" }
nucliadb_paragraphs = { path = "../nucliadb_paragraphs" }
nucliadb_vectors = { path = "../nucliadb_vectors" }
nucliadb_relations = { path = "../nucliadb_relations" }

# sentry sdk
sentry = "0.26.0"
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "registry",
    "std",
    "json",
] }
tracing-log = { version = "0.1.3", features = ["env_logger"] }
opentelemetry-zipkin = "0.15.0"
sentry-tracing = "0.27.0"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
tracing-core = "0.1.31"
# indra
# indradb-lib = { version = "1", features = ["rocksdb-datastore"] }

[build-dependencies]
tonic-build = "0.7.0"

[features]
ci-test = []
release-feature-set = []

[profile.release]
lto = true

[dev-dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }

once_cell = { version = "1.17" }

tokio = { version = "1.12.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
] }

tracing = { version = "0.1.29" }
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "registry",
    "std",
] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serial_test = "2.0.0"


tempfile = "3.2.0"
regex = "1.5.5"
openssl = { version = "0.10.57", features = ["vendored"] }
