[package]
name = "nucliadb_node"
version = "0.1.0"
edition = "2021"
authors = ["NucliaDB <nucliadb@nuclia.com>"]
license = 'AGPL-3.0-or-later'
description = "Node of nucliadb"
repository = "https://github.com/nuclia/nucliadb"
homepage = "https://nuclia.com"
documentation = "https://nuclia.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node_reader"
path = "src/bin/reader.rs"

[[bin]]
name = "node_writer"
path = "src/bin/writer.rs"

[dependencies]
axum = "0.6"
axum-server = "0.5"

tonic = "0.11"
tonic-health = "0.11"
futures-core = "0.3.17"
futures-util = "0.3.17"
futures = "0.3.17"
tokio = { version = "1.12.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
] }
tokio-stream = "0.1.7"
log = "0.4.14"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
bincode = "1.3.3"
async-trait = "0.1.51"
time = "0.3.3"
itertools = "0.12"
anyhow = { version = "1", features = ["backtrace"] }
http = "0.2"
hyper = "0.14.26"
tower = "0.4.13"
thiserror = "1"
opentelemetry = { version = "0.22", features = ["trace"] }
tracing-opentelemetry = "0.23"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
num_cpus = "1.16.0"
crossbeam-utils = "0.8.16"
object_store = { version = "^0.10.1", features = ["gcp", "aws"]}
base64 = "^0.21"


# Text Service
async-stream = "0.3.2"

rand = "0.8.4"

# nucliadb dependencies
nucliadb_core = { path = "../nucliadb_core" }
nucliadb_procs = { path = "../nucliadb_procs" }
nucliadb_texts2 = { path = "../nucliadb_texts2" }
nucliadb_paragraphs2 = { path = "../nucliadb_paragraphs2" }
nucliadb_paragraphs3 = { path = "../nucliadb_paragraphs3" }
nucliadb_vectors = { path = "../nucliadb_vectors" }
nucliadb_relations2 = { path = "../nucliadb_relations2" }
nucliadb_protos = { path = "../nucliadb_protos/rust" }

# sentry sdk
sentry = "0.31.8"
opentelemetry-jaeger = { version = "0.21", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "registry",
    "std",
    "json",
] }
tracing-log = "0.2"
opentelemetry-zipkin = "0.20.0"
sentry-tracing = "0.31"
tracing-core = "0.1.31"

filetime = "0.2"

# analytics deps
once_cell = "1.8.0"
tracing = { version = "0.1.29" }
hostname = "0.3"
username = "0.2"
md5 = "0.7"
lazy_static = "1.4.0"
lru = "0.12.1"
sysinfo = { version = "0.30.5", default-features = false }
envy = "0.4.2"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }


[build-dependencies]
tonic-build = "0.11.0"

[features]
ci-test = []
release-feature-set = []

[profile.release]
lto = true

[dev-dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }

tokio = { version = "1.12.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "fs",
] }


tracing-log = "0.2"
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "registry",
    "std",
] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serial_test = "2.0.0"
tempfile = "3.2.0"
regex = "1.5.5"
openssl = { version = "0.10.57", features = ["vendored"] }

rstest = "0.18.2"
