[package]
name = "nucliadb_node_binding"
version = "2.26.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nucliadb_node_binding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module"] }
nucliadb_node = { path = "../nucliadb_node" }
nucliadb_core = { path = "../nucliadb_core" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
bincode = "1.3.3"
cargo-llvm-cov = "0.5.24"

openssl = { version = "0.10.57", features = ["vendored"] }
prost = "0.10"
prost-types = "0.10"
tracing = { version = "0.1.29" }
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "registry",
    "std",
] }

[package.metadata.maturin]
python-source = "python"
