[package]
name = "nucliadb_paragraphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
lazy_static = "1.4.0"
regex = "1.5.5"
tantivy = { git = "https://github.com/nuclia/tantivy.git", branch = "original-17" }
levenshtein_automata = "0.2.1"
once_cell = "1.13.1"
tantivy-fst = "0.3.0"
tantivy-common = "0.2.0"
itertools = "0.10.5"

serde_json = "1.0.86"

nucliadb_core = { path = "../nucliadb_core" }
nucliadb_procs = { path = "../nucliadb_procs" }

[build-dependencies]
serde_json = "1.0.86"
itertools = "0.10.5"
