[package]
name = "nucliadb_paragraphs_tantivy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
tantivy = "0.17.0"
levenshtein_automata = "0.2.1"
once_cell = "1.13.1"
tantivy-fst = "0.3.0"
tantivy-common = "0.2.0"
nucliadb_service_interface = { path = "../nucliadb_service_interface" }
prost = "0.10"
itertools = "0.10.5"

[build-dependencies]
serde_json = "1.0.86"
itertools = "0.10.5"
