[package]
name = "nucliadb_procs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
quote = "1.0.33"

[dev-dependencies]
trybuild = "1.0.84"
nucliadb_core = { path = "../nucliadb_core" }
