[build-system]
requires = [
    "pdm-backend",
    # Pin grpio-tools so `make protos` compile with the version we want
    # To use grpc stubs, you need a newer dependency than what was used to build this module
    "grpcio-tools>=1.71.0,==1.71.0,<1.72.0",
    "mypy-protobuf>=3.6.0",
]
build-backend = "pdm.backend"

[project]
name = "nucliadb_protos"
version = "6.9.4"
license = "Apache-2.0"
description = "Protobuf definitions for nucliadb"
authors = [{ name = "Nuclia", email = "nucliadb@nuclia.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10, <4"
dependencies = [
    "protobuf >= 5",
    "mypy-protobuf >= 3.4.0",
    "types-protobuf >= 5",
]

[project.urls]
Homepage = "https://nuclia.com"
Repository = "https://github.com/nuclia/nucliadb"

[tool.pdm.build]
custom-hook = "build.py"
