[build-system]
requires = [
    "pdm-backend",
    # Pin grpio-tools so `make protos` compile with the version we want
    # To use grpc stubs, you need a newer dependency than what was used to build this module
    "grpcio-tools==1.76.0",
    "mypy-protobuf==3.6.0",
]
build-backend = "pdm.backend"

[project]
name = "nucliadb_protos"
version = "6.10.0"
license = "Apache-2.0"
description = "Protobuf definitions for nucliadb"
authors = [{ name = "Nuclia", email = "nucliadb@nuclia.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10, <4"
dependencies = [
    "protobuf>=6.31.1,<7.0.0"
]

[project.optional-dependencies]
grpc = ["grpcio>=1.76.0"]

[project.urls]
Homepage = "https://nuclia.com"
Repository = "https://github.com/nuclia/nucliadb"

[tool.pdm.build]
custom-hook = "build.py"
