[package]
name = "nucliadb_relations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heed = { version = "0.11.0", default-features = false, features = ["lmdb", "sync-read-txn"] }
nucliadb_byte_rpr= {path= "../nucliadb_byte_rpr"}
nucliadb_service_interface = {path = "../nucliadb_service_interface"}
tempfile = "3"